--- a/src/Codeizi/Codeizi.CLI/Codeizi.CLI.csproj
+++ b/src/Codeizi/Codeizi.CLI/Codeizi.CLI.csproj
@@ -5,10 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>cdz</AssemblyName>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
 
 </Project>
