--- a/src/Codeizi/Codeizi.Service.Test/Codeizi.Service.Test.csproj
+++ b/src/Codeizi/Codeizi.Service.Test/Codeizi.Service.Test.csproj
@@ -34,4 +34,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Executions\" />
+  </ItemGroup>
+
 </Project>
